--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
       // Begin Swagger UI call region
       const ui = SwaggerUIBundle({
         urls: [
-          {url: "firefly-iii-0.9.1.yaml", name: "0.9.1"}
+          {url: "firefly-iii-0.9.1.yaml", name: "0.9.1"},
+          {url: "firefly-iii-0.9.0.yaml", name: "0.9.0"}
           ],
         dom_id: '#swagger-ui',
         deepLinking: true,
