--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
       // Begin Swagger UI call region
       const ui = SwaggerUIBundle({
         urls: [
+          {url: "firefly-iii-0.10.2.yaml", name: "0.10.2"},
           {url: "firefly-iii-0.10.0.yaml", name: "0.10.0"},
           {url: "firefly-iii-0.9.2.yaml", name: "0.9.2"},
           {url: "firefly-iii-0.9.1.yaml", name: "0.9.1"},
