--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>FF3 local API</title>
+    <title>Firefly III API documentation</title>
     <link rel="stylesheet" type="text/css" href="./swagger-ui.css" >
     <link rel="icon" type="image/png" href="./favicon-32x32.png" sizes="32x32" />
     <link rel="icon" type="image/png" href="./favicon-16x16.png" sizes="16x16" />
@@ -41,6 +41,7 @@
       // Begin Swagger UI call region
       const ui = SwaggerUIBundle({
         urls: [
+          {url: "firefly-iii-1.0.0.yaml", name: "1.0.0"},
           {url: "firefly-iii-0.10.4.yaml", name: "0.10.4"},
           {url: "firefly-iii-0.10.2.yaml", name: "0.10.2"},
           {url: "firefly-iii-0.10.0.yaml", name: "0.10.0"},
