--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
       // Begin Swagger UI call region
       const ui = SwaggerUIBundle({
         urls: [
+          {url: "firefly-iii-1.2.0.yaml", name: "1.2.0"},
           {url: "firefly-iii-1.1.0.yaml", name: "1.1.0"},
           {url: "firefly-iii-1.0.2.yaml", name: "1.0.2"},
           {url: "firefly-iii-1.0.1.yaml", name: "1.0.1"},
