--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
       // Begin Swagger UI call region
       const ui = SwaggerUIBundle({
         urls: [
+          {url: "firefly-iii-1.5.1.yaml", name: "1.5.1"},
           {url: "firefly-iii-1.5.0.yaml", name: "1.5.0"},
           {url: "firefly-iii-1.4.0.yaml", name: "1.4.0"},
           {url: "firefly-iii-1.3.0.yaml", name: "1.3.0"},
