--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
       // Begin Swagger UI call region
       const ui = SwaggerUIBundle({
         urls: [
+          {url: "firefly-iii-1.5.4.yaml", name: "1.5.4"},
           {url: "firefly-iii-1.5.3.yaml", name: "1.5.3"},
           {url: "firefly-iii-1.5.2.yaml", name: "1.5.2"},
           {url: "firefly-iii-1.5.1.yaml", name: "1.5.1"},
