--- a/index.html
+++ b/index.html
@@ -41,9 +41,9 @@
       // Begin Swagger UI call region
       const ui = SwaggerUIBundle({
         urls: [
+          {url: "./firefly-iii-2.0.0-v1.yaml", name: "2.0.0 (v1)"},
+          {url: "./firefly-iii-2.0.0-v2.yaml", name: "2.0.0 (v2)"},
           {url: "./firefly-iii-1.5.6.yaml", name: "1.5.6"},
-          {url: "./firefly-iii-v1-2.0.0.yaml", name: "2.0.0 (v1)"},
-          {url: "./firefly-iii-v2-2.0.0.yaml", name: "2.0.0 (v2)"},
           {url: "firefly-iii-1.5.5.yaml", name: "1.5.5"},
           {url: "firefly-iii-1.5.4.yaml", name: "1.5.4"},
           {url: "firefly-iii-1.5.3.yaml", name: "1.5.3"},
