Add new API version (as non-default).

--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
         urls: [
           {url: "./firefly-iii-2.0.0-v1.yaml", name: "2.0.0 (v1)"},
           {url: "./firefly-iii-2.0.0-v2.yaml", name: "2.0.0 (v2)"},
+          {url: "./firefly-iii-2.0.2-v1.yaml", name: "2.0.2 (v1)"},
+          {url: "./firefly-iii-2.0.2-v2.yaml", name: "2.0.2 (v2)"},
           {url: "./firefly-iii-1.5.6.yaml", name: "1.5.6"},
           {url: "firefly-iii-1.5.5.yaml", name: "1.5.5"},
           {url: "firefly-iii-1.5.4.yaml", name: "1.5.4"},
