--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
       // Begin Swagger UI call region
       const ui = SwaggerUIBundle({
         urls: [
+          {url: "./firefly-iii-2.0.5-v1.yaml", name: "2.0.5 (v1)"},
+          {url: "./firefly-iii-2.0.5-v2.yaml", name: "2.0.5 (v2)"},
           {url: "./firefly-iii-2.0.4-v1.yaml", name: "2.0.4 (v1)"},
           {url: "./firefly-iii-2.0.4-v2.yaml", name: "2.0.4 (v2)"},
           {url: "./firefly-iii-2.0.3-v1.yaml", name: "2.0.3 (v1)"},
