--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
       // Begin Swagger UI call region
       const ui = SwaggerUIBundle({
         urls: [
+          {url: "./firefly-iii-2.0.10-v1.yaml", name: "2.0.10 (v1)"},
+          {url: "./firefly-iii-2.0.10-v2.yaml", name: "2.0.10 (v2)"},
           {url: "./firefly-iii-2.0.9-v1.yaml", name: "2.0.9 (v1)"},
           {url: "./firefly-iii-2.0.9-v2.yaml", name: "2.0.9 (v2)"},
           {url: "./firefly-iii-2.0.8-v1.yaml", name: "2.0.8 (v1)"},
